# FinSight-Credit-Risk-ML

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_SUBMISSION.md  Makefile  PROJECT_BRIEF.md  README.md  RELEASE_CHECKLIST.md  REVIEW_GUIDE.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
dashboard/: build_dashboard_data.py
notebooks/: 01_data_understanding.ipynb  02_eda.ipynb
reports/: api_summary.md  baseline_modeling_summary.md  batch_scoring_sample.csv  batch_scoring_schema.json  batch_scoring_summary.md  business_impact_by_threshold.csv  business_impact_summary.md  calibration_comparison.csv  calibration_report.md  challenger_governance.json  challenger_governance_report.md  challenger_model_comparison.csv  collections_priority_sample.csv  collections_summary.md  cross_validation_results.csv  cross_validation_summary.md  dashboard_summary.md  data_schema_summary.md  eda_summary.md  executive_summary.md  explainability_summary.md  fair_lending_governance.json  fair_lending_review.md  fairness_proxy_analysis.md  fairness_proxy_metrics.csv  feature_engineering_summary.md  feature_registry.csv  feature_registry.md  final_case_study.md  final_model_metrics.json  final_model_report.md  final_project_audit.md  github_polish_checklist.md  github_repository_presentation.md  governance_checklist.md  interview_defense_guide.md  leakage_audit.md  mlflow_experiment_summary.md  model_card.md  model_comparison.csv  (+11 more)
sql/: default_rate_by_credit_amount.sql  default_rate_by_education.sql  (+3 more)
(+50 files in other folders)
