[project]
name = "finsight-credit-risk-ml"
version = "0.1.0"
description = "Explainable credit risk, collections prioritization, API serving, and model monitoring platform."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ansh" }
]
keywords = [
  "credit-risk",
  "collections",
  "machine-learning",
  "pyspark",
  "fastapi",
  "model-monitoring",
  "shap"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

